compiler/actonc/test/typeerrors/funargs6.act
def f(x,y,*z,w):
    return x

a = f(3,w=6)
