compiler/actonc/test/typeerrors/funargs6.golden
Building file test/typeerrors/funargs6.act
  Compiling funargs6.act for development

ERROR: Error when compiling funargs6 module: Type error

  |
1 |def f(x,y,*z,w):
  |    ^


  |
4 |a = f(3,w=6)
  |    ^^^^^^^^
Type incompatibility between definition of and call of f (too few argument(s) in call)

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 

